--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "00a543cd",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
       "text/html": [
        "\n",
        "        <style>\n",
-       "             .container { width:900px !important; }\n",
+       "             .container { width:800px !important; }\n",
        "             .figure {display:table; margin:auto;}\n",
        "             .img {float: left; margin: 10px; min-width: 300px;}\n",
        "             .caption {display:table-caption;caption-side:bottom;text-align:justify;color: rgba(0,0,0,0.6);}\n",
@@ -45,6 +45,16 @@
     "import gtn\n",
     "import nb_utils\n",
     "nb_utils.init()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e60ee7b7",
+   "metadata": {},
+   "source": [
+    "## Acceptors\n",
+    "\n",
+    "Let's start by constructing some very basic automata to get a feel for their various properties."
    ]
   },
   {
@@ -90,24 +100,14 @@
     "    <img src=\"figures/simple_nfa.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "     An example of a deterministic automata on the left and a nondeterministic automata on the right. The nondeterministic automata has two arcs leaving the state $2$ both with the label $c$.\n",
+    "     An example of a deterministic automata on the left and a nondeterministic automata on the right. The nondeterministic automata has two arcs leaving state $0$ both with label $a$ and two arcs leaving state $2$ both with the label $c$.\n",
     "  </div>\n",
     "</div>"
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e60ee7b7",
-   "metadata": {},
-   "source": [
-    "## Acceptors\n",
-    "\n",
-    "Let's start by constructing some very basic automata to get a feel for their various properties."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "2e4bd14d",
    "metadata": {},
    "outputs": [],
@@ -163,22 +163,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "dbe6dae3",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fsa' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-1-5ea2b11fde6d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mfsa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_node\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mfsa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_arc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc_node\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst_node\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0milabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0molabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfsa\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0madd_arc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msrc_node\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdst_node\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0milabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0molabel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mweight\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mgtn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdraw\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfsa\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"figures/multi_path.svg\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0misymbols\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0msymbols\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'fsa' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "fsa.add_node()\n",
     "fsa.add_arc(src_node=0, dst_node=3, ilabel=0, olabel=0, weight=1)\n",
@@ -213,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "80f3268d",
    "metadata": {},
    "outputs": [],
@@ -283,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "2fe290ca",
    "metadata": {},
    "outputs": [],
@@ -321,12 +309,12 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "The language of graphs with cycles and self-loops contain infinitely many strings. For example the graph above accepts any string that starts with zero or more $a$s and ends in $bb$. As a regular expression we write this as $a^*bb$ where the $^*$ denotes zero or more $a$s. "
+    "The language of a graph with cycles and self-loops contains infinitely many strings. For example, the language of the graph above includes any string that starts with zero or more $a$s and ends in $bb$. As a regular expression we write this as $a^*bb$ where the $^*$ denotes zero or more $a$s. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "de58dea6",
    "metadata": {},
    "outputs": [],
@@ -370,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "69b94426",
    "metadata": {},
    "outputs": [],
