--- a/notebooks/basic_operations.ipynb
+++ b/notebooks/basic_operations.ipynb
@@ -155,7 +155,7 @@
     "---\n",
     "### Example\n",
     "\n",
-    "You might notice that the state $4$ in the above graph is not necessary. Consider an alternate construction for computing the closure of a graph. We could have made the state $0$ into an accept state and connected state $3$ to state $0$ with an $\\epsilon$ transition, as in the graph below."
+    "You might notice that state $4$ in the above graph is not necessary. Consider an alternate construction for computing the closure of a graph. We could have made the state $0$ into an accept state and connected state $3$ to state $0$ with an $\\epsilon$ transition, as in the graph below."
    ]
   },
   {
@@ -710,7 +710,7 @@
    "id": "e14ebf53",
    "metadata": {},
    "source": [
-    "First concatenate the individual graphs with themselves to get graphs which recognize $aa$, $bb$, and $cc$. Then take the union of the three concatenated graphs followed by the closure. The resulting graph is shown below. If we represent the individual automata as , then the equation to compute the desired graph is $\\gA = (\\gA_a\\gA_a + \\gA_b\\gA_b + \\gA_c\\gA_c)^*$.\n",
+    "First concatenate the individual graphs with themselves to get graphs which recognize $aa$, $bb$, and $cc$. Then take the union of the three concatenated graphs followed by the closure. The resulting graph is shown below. The equation to compute the desired graph is $\\gA = (\\gA_a\\gA_a + \\gA_b\\gA_b + \\gA_c\\gA_c)^*$.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\">\n",
