--- a/latex/basic_operations.tex
+++ b/latex/basic_operations.tex
@@ -151,7 +151,7 @@ $\{ab, aba, abaa, \ldots\}$, $\{ba\}$, and $\{ac\}$ respectively.
         \caption{}
     \end{subfigure}
     \caption{Three acceptors with languages $\{ab, aba, abaa, \ldots\}$,
-    $\{ba\}$, and $\{ac\}$ from left to right, respectively.}
+    $\{ba\}$, and $\{ac\}$ from top to bottom, respectively.}
     \label{fig:union_inputs}
 \end{figure}
 
