more fangjun comments

--- a/latex/advanced_operations.tex
+++ b/latex/advanced_operations.tex
@@ -9,7 +9,7 @@ score of the path in each of the input graphs. More formally the language of
 the intersected graph is given by $\{ \vx \mid \vx \in \L(\gA_1) \;\land\; \vx
 \in \L(\gA_2)\}$.
 
-The analogous operation for transducers is the composition, which we will
+The analogous operation for transducers is the composition, which I will
 discuss in more detail in the next section. In most machine learning
 applications, intersect and compose tend to be the primary operations used to
 compute more complex graphs from simpler input graphs. Thus gaining a deeper
@@ -526,7 +526,7 @@ introduced as shortest distance algorithms under a respective semiring. The
 forward score corresponds to the log semiring and the Viterbi score
 corresponds to the tropical semiring. This is a more general perspective,
 and useful if you intend to use other semirings. However, we only need the
-log and tropical semirings in all of the applications we study, so we will
+log and tropical semirings in all of the applications we study, so I will
 restrict the description to the more specific forward and Viterbi score.
 \end{tcolorbox}
 
