--- a/notebooks/acceptors_and_transducers.ipynb
+++ b/notebooks/acceptors_and_transducers.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "## Transducers\n",
     "\n",
-    "A *transducer* maps input strings to output strings. Transducers are a generalization of an acceptors. Every acceptor is a transducer, but not every transducer is an acceptor. Let's look at a few example transducers to understand how they work."
+    "A *transducer* maps input strings to output strings. Transducers are a generalization of acceptors. Every acceptor is a transducer, but not every transducer is an acceptor. Let's look at a few example transducers to understand how they work."
    ]
   },
   {
@@ -471,7 +471,7 @@
     "  </div>\n",
     "</div>\n",
     "\n",
-    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transduces the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weights of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
+    "Instead of saying that a transducer accepts a given string, we say that it *transduces* one string to another. The above graph transduces the string $ab$ to the string $xz$ and the string $bb$ to the string $yz$. The weight of a transduced pair is computed in the same way as in an acceptor. The scores of the individual arcs on the path are summed. The path scores are combined with *log-sum-exp*. So the weight of the transduced pair $(ab, xz)$ in the above graph is $0+3 = 3$.\n",
     "\n",
     "We have to generalize concept of the language from an acceptor to a transducer. I'll call this generalization the transduced set. Since it will always be clear from context if the graph is an acceptor or transducer, I'll use the same symbol $\\mathcal{L}$ to represent the transduced set. If $\\gT$ is a transducer, then $\\mathcal{L}(\\gT)$ is the set of pairs of strings transduced by $\\gT$. More formally, a pair of strings $(\\vx, \\vy) \\in \\mathcal{L}(\\gT)$ if $\\gT$ transduces $\\vx$ to $\\vy$.\n",
     "\n",
