--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -62,7 +62,7 @@
     "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
     "\\renewcommand\\L{\\mathcal{L}}$The intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
     "\n",
-    "The analogous operation for transducers is the composition, which we will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
+    "The analogous operation for transducers is the composition, which I will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
    ]
   },
   {
@@ -603,7 +603,7 @@
     "\n",
     "### Aside: Shortest Distance\n",
     "\n",
-    "In some descriptions of weighted automata, the forward and Viterbi score are introduced as shortest distance algorithms under a respective semiring. The forward score corresponds to the log semiring and the Viterbi score corresponds to the tropical semiring. This is a more general perspective, and useful if you intend to use other semirings. However, we only need the log and tropical semirings in all of the applications we study, so we will restrict the description to the more specific forward and Viterbi score.\n",
+    "In some descriptions of weighted automata, the forward and Viterbi score are introduced as shortest distance algorithms under a respective semiring. The forward score corresponds to the log semiring and the Viterbi score corresponds to the tropical semiring. This is a more general perspective, and useful if you intend to use other semirings. However, we only need the log and tropical semirings in all of the applications we study, so I will restrict the description to the more specific forward and Viterbi score.\n",
     "\n",
     "---\n",
     "\n",
