--- a/notebooks/extended_examples.ipynb
+++ b/notebooks/extended_examples.ipynb
@@ -611,7 +611,7 @@
     "In terms of graph operations, we can write the ASG criterion as:\n",
     "\n",
     "$$\n",
-    "p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE) - \\LSE(\\gE).\n",
+    "\\log p(\\vy \\mid \\mX) = \\LSE(\\gA_\\vy \\circ \\gE) - \\LSE(\\gE).\n",
     "$$\n",
     "\n",
     "---\n",
@@ -744,7 +744,7 @@
     "To incorporate transition scores for the output sequence, we intersect the bigram graph $\\gB$ with the output alignment graph $\\gA_\\vy$. To incorporate transition scores in the normalization term $Z$, we intersect $\\gB$ with the emissions graph $\\gE$. The loss function using graph operations including transitions becomes:\n",
     "\n",
     "$$\n",
-    "p(\\vy \\mid \\mX) = \\LSE(\\gB \\circ \\gA_\\vy \\circ \\gE) - \\LSE(\\gB \\circ \\gE).\n",
+    "\\log p(\\vy \\mid \\mX) = \\LSE(\\gB \\circ \\gA_\\vy \\circ \\gE) - \\LSE(\\gB \\circ \\gE).\n",
     "$$\n",
     "\n",
     "We see here an example of the expressive power of a graph-based implementation of the loss function. In a non-graph based implementation of ASG, the use of a bigram transition function is hard-coded. In the graph-based version, the transition model $\\gB$ could be a unigram, bigram, trigram, or otherwise arbitrary $n$-gram. Of course, the size of the transition graph increases rapidly with the order $n$ and the size of the token set (see the $n$-gram [example](#ngram_example)). This causes problems with both sample and computational efficiency. Thus, in practice ASG is used with a bigram transition model and token set sizes rarely larger than a hundred.\n",
