--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -446,11 +446,11 @@
    "id": "01375846",
    "metadata": {},
    "source": [
-    "### Intersection and Composition with $\\epsilon$\n",
+    "### Intersect and Compose with $\\epsilon$\n",
     "\n",
-    "The basic implementation of intersection and composition we have discussed so far doesn't extend to $\\epsilon$ transitions. Allowing $\\epsilon$ transitions in these algorithms makes them more complicated. In this section I will illustrate the challenges with the naive approach and sketch at a high-level how to actually include $\\epsilon$ transitions in the algorithms.\n",
+    "The basic implementation of intersect and compose we have discussed so far doesn't extend to $\\epsilon$ transitions. Allowing $\\epsilon$ transitions in these algorithms makes them more complicated. In this section I will illustrate the challenges with a naive approach and sketch at a high-level how to actually account for $\\epsilon$ transitions in the intersect and compose algorithms.\n",
     "\n",
-    "First, consider the simpler case when only the first input graphs has $\\epsilon$ transitions. In this case, whenever we encounter an outgoing $\\epsilon$ transition from a state in the first graph we can optionally traverse it without matching a corresponding arc in the second graph. Consider the two sub-graphs below.\n",
+    "First, consider the simpler case when only the first input graph has $\\epsilon$ transitions. In this case, whenever we encounter an outgoing $\\epsilon$ transition from a state in the first graph, we can optionally traverse it without matching a corresponding arc in the second graph. Consider the two sub-graphs below.\n",
     "\n",
     "<div class=\"figure\">\n",
     "  <div class=\"img\" style=\"min-width:140px;\">\n",
