--- a/notebooks/basic_operations.ipynb
+++ b/notebooks/basic_operations.ipynb
@@ -402,9 +402,9 @@
     "    </div>\n",
     "</div>\n",
     "\n",
-    "## Concatenation\n",
+    "## Concatenate\n",
     "\n",
-    "Like union, concatenation produces a new graph given two or more graphs as input. The language of the concatenated graph is the set of strings which can be formed by any concatenation of strings from the individual graph. Concatenation is not commutative, the order of the input graphs matters. More formally the language of the concatenated graph is given by $\\{\\vx_1 \\ldots \\vx_n \\mid \\vx_1 \\in \\mathcal{L}(\\gA_1), \\ldots, \\vx_n \\in \\mathcal{L}(\\gA_n)\\}$. Occasionally, I will denote concatenation by placing the graphs side-by-side. So $\\gA_1 \\gA_2$ represents the concatenation of $\\gA_1$ and $\\gA_2$."
+    "Like union, concatenate produces a new graph given two or more graphs as input. The language of the concatenated graph is the set of strings which can be formed by any concatenation of strings from the individual graph. Concatenate is not commutative, the order of the input graphs matters. More formally the language of the concatenated graph is given by $\\{\\vx_1 \\ldots \\vx_n \\mid \\vx_1 \\in \\mathcal{L}(\\gA_1), \\ldots, \\vx_n \\in \\mathcal{L}(\\gA_n)\\}$. Occasionally, I will denote concatenation by placing the graphs side-by-side. So $\\gA_1 \\gA_2$ represents the concatenation of $\\gA_1$ and $\\gA_2$."
    ]
   },
   {
@@ -528,7 +528,7 @@
     "    <img src=\"figures/concat_annihilator.svg\"/> \n",
     "  </div>\n",
     "  <div class=\"caption\" markdown=\"span\">\n",
-    "    The identity (left) and the annihilator (right) for the concatenation operation. The language of the identity graph is the empty string $\\{\\epsilon\\}$. The language of the annihilator graph is the empty set $\\{\\}$.\n",
+    "    The identity (left) and the annihilator (right) for the concatenate operation. The language of the identity graph is the empty string $\\{\\epsilon\\}$. The language of the annihilator graph is the empty set $\\{\\}$.\n",
     "  </div>\n",
     "</div>\n",
     "\n",
@@ -632,13 +632,13 @@
     "\n",
     "- **Union:** The union graph accepts any string from any of the input graphs. The union of two graphs $\\gA_1$ and $\\gA_2$ is denoted $\\gA_1 + \\gA_2$.\n",
     "\n",
-    "- **Concatenation:** The concatenated graph accepts any string which can be formed by concatenating strings (respecting order) from the input graphs. The concatenation of two graphs $\\gA_1$ and $\\gA_2$ is denoted $\\gA_1\\gA_2$.\n",
+    "- **Concatenate:** The concatenated graph accepts any string which can be formed by concatenating strings (respecting order) from the input graphs. The concatenation of two graphs $\\gA_1$ and $\\gA_2$ is denoted $\\gA_1\\gA_2$.\n",
     "\n",
     "---\n",
     "\n",
     "### Example\n",
     "\n",
-    "Assume you are given the following individual graphs $\\gA_a$, $\\gA_b$, and $\\gA_c$, which recognize $a$, $b$, and $c$ respectively.  Using only the closure, union, and concatenation operations, construct the graph which recognizes any number of repeats of the strings $aa$, $bb$, and $cc$. For example $aabb$ and $bbaacc$ are in the language but $b$ and $ccaab$ are not."
+    "Assume you are given the following individual graphs $\\gA_a$, $\\gA_b$, and $\\gA_c$, which recognize $a$, $b$, and $c$ respectively.  Using only closure, union, and concatenate, construct the graph which recognizes any number of repeats of the strings $aa$, $bb$, and $cc$. For example $aabb$ and $bbaacc$ are in the language but $b$ and $ccaab$ are not."
    ]
   },
   {
