--- a/latex/advanced_operations.tex
+++ b/latex/advanced_operations.tex
@@ -3,11 +3,11 @@
 
 \subsection{Intersect}
 
-The intersection of two acceptors is the set of strings which is accepted by
-both of them. The score of a path in the intersected graph is the sum of the
-score of the path in each of the input graphs. More formally the language of
-the intersected graph is given by $\{ \vx \mid \vx \in \L(\gA_1) \;\land\; \vx
-\in \L(\gA_2)\}$.
+The language of the intersection of two acceptors is the set of strings which
+is accepted by both of them. The score of a path in the intersected graph is
+the sum of the score of the path in each of the input graphs. More formally the
+language of the intersected graph is given by $\{ \vx \mid \vx \in \L(\gA_1)
+\;\land\; \vx \in \L(\gA_2)\}$.
 
 The analogous operation for transducers is the composition, which I will
 discuss in more detail in the next section. In most machine learning
