--- a/notebooks/advanced_operations.ipynb
+++ b/notebooks/advanced_operations.ipynb
@@ -60,7 +60,7 @@
     "\\newcommand{\\gT}{\\mathcal{T}}\n",
     "\\newcommand{\\gU}{\\mathcal{U}}\n",
     "\\DeclareMathOperator*{\\LSE}{\\textrm{LSE}}\n",
-    "\\renewcommand\\L{\\mathcal{L}}$The intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
+    "\\renewcommand\\L{\\mathcal{L}}$The language of the intersection of two acceptors is the set of strings which is accepted by both of them. The score of a path in the intersected graph is the sum of the score of the path in each of the input graphs. More formally the language of the intersected graph is given by $\\{ \\vx \\mid \\vx \\in \\L(\\gA_1) \\;\\land\\; \\vx \\in \\L(\\gA_2)\\}$.\n",
     "\n",
     "The analogous operation for transducers is the composition, which I will discuss in more detail in the next section. In most machine learning applications, intersect and compose tend to be the primary operations used to compute more complex graphs from simpler input graphs. Thus gaining a deeper understanding of these two operations is worth the time."
    ]
