Fix reference errors

--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -241,8 +241,8 @@ a subset of these using weighted automata. \citet{hannun2017sequence} gives a
 more detailed introduction to Connectionist Temporal Classification.
 
 In terms of software, two of the better known libraries for operations on WFSTs
-are OpenFST~\citep{mohri2000design} and its predecessor
-FSM~\citep{allauzen2007openfst}. In section~\ref{sec:comparison_to_tensors}, I
+are OpenFST~\citep{allauzen2007openfst} and its predecessor
+FSM~\citep{mohri2000design}. In section~\ref{sec:comparison_to_tensors}, I
 compared weighted automata to tensors. PyTorch~\citep{paszke2019pytorch} and
 TensorFlow~\citep{abadi2016tensorflow} are two of the most used libraries for
 tensor-based deep learning with automatic differentiation. These were based on
