Fix caption error

--- a/latex/basic_operations.tex
+++ b/latex/basic_operations.tex
@@ -280,8 +280,8 @@ figure~\ref{fig:concat_example_inputs}.
         \centering
         \includegraphics[scale=\dotscale]{figures/concat_example_2}
     \end{subfigure}
-    \caption{The acceptor on the right has the language $\{ba, bc\}$, the
-    acceptor on the left has the language $\{a, c\}$.}
+    \caption{The acceptor on the left has the language $\{ba, bc\}$, the
+    acceptor on the right has the language $\{a, c\}$.}
     \label{fig:concat_example_inputs}
 \end{figure}
 
