--- a/latex/introduction.tex
+++ b/latex/introduction.tex
@@ -128,7 +128,7 @@ sub-optimal.
 
 One of the benefits of combining automatic differentiation with weighted
 automata is the potential to bring the training and inference stages closer
-together. For example, speech recognition systems often uses hand-implemented
+together. For example, speech recognition systems often use hand-implemented
 loss functions at training time. However, the decoder (used for inference)
 brings together multiple models represented as automata (lexicon, language model,
 acoustic model, \emph{etc.}) in a completely different code path. By enabling
